--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -24,6 +24,11 @@
       </div>
       <div class="col-3 mt-5">
         <p>
+          Ingredientes:
+          <%= recipe.ingredients %>
+        </p>
+        <p>
+          Receta:
           <%= recipe.directions %>
         </p>
       </div>
