--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,21 +1,31 @@
 <%- include('partials/header') -%>
     <div class="container">
-        <div class="row justify-content-center mt-5">
-            <ul class="row list-unstyled">
-                <% for(var i=0; i<recipes.length; i++) {%>
-                    <li class="col-6 justify-content-between mt-5">
-                        <h2>
-                            <%= recipes[i].name %>
-                        </h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <% for(var i=0; i<recipes.length; i++) {%>
+                <div class="col">
+                    <div class="card h-100">
                         <a href="/recipe/<%= recipes[i]._id%>">
-                            <img class="img-fluid" src="<%= recipes[i].image%>">
+                            <img src="<%= recipes[i].image%>" class="card-img-top" alt="...">
                         </a>
-                        <p>
-                            <%= recipes[i].ingredients %>
-                        </p>
-                    </li>
-                    <% } %>
-            </ul>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                Nombre: <%= recipes[i].name %>
+                            </h5>
+                            <p class="card-text truncated-text">
+                                Ingredientes: <%= recipes[i].ingredients %>
+                            </p>
+                            <p class="card-text truncated-text">
+                                Receta: <%= recipes[i].directions %>
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">
+                                Escripta por: <%= recipes[i].user.email %>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <% } %>
         </div>
     </div>
     <%- include('partials/footer') -%>
